# arpeely-scraper

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
arpeely_scraper/app/: cli.py  main.py  models.py  service.py
arpeely_scraper/app/api/: main.py  models.py
arpeely_scraper/app/cli/: cli.py  cli_entrypoint.sh  init_cli_service.py
arpeely_scraper/app/scripts/: create_scraped_url_table.sql
arpeely_scraper/core/: di_container.py  scraper.py  url_metadata.py
arpeely_scraper/db_connector/: di_container.py  scraped_url_db_connector.py
arpeely_scraper/models/: topic_classifier.py
arpeely_scraper/utils/: dataclasses.py
tests/: test_scraper.py
