[project]
name = "arpeely-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "oamar",email = "omeramar4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
    "aiohttp>=3.8.0",
    "dependency-injector>=4.48.1,<5.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "uvicorn>=0.35.0,<0.36.0",
    "fastapi>=0.116.1,<0.117.0",
    "transformers>=4.21.0,<5.0.0",
    "torch==2.7.1",
    "click>=8.0.0",
]

[project.scripts]
arpeely = "arpeely_scraper.app.cli.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
